<resources>
    <string name="app_name">SocialMediaHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_status">Status</string>
    <string name="title_directchat">Direct Chat</string>
    <string name="noti_settings">Notification Settings</string>
    <string name="rate_apps">Rate App</string>
    <string name="more_apps">More Apps</string>
    <string name="share_app">Share App</string>
    <string name="shareFeedback">Feedback</string>
    <string name="aboutUs">AboutUs</string>
    <string name="fcm_defaultSenderId">123456789</string>
    <string name="download_completed">Download Completed</string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="save_status_subtitle">Save Status</string>
    <string name="post">Post</string>
    <string name="saved_image_toast">Downloaded Successfully</string>
    <string name="delete_image">image deleted</string>
    <string name="save_image_toast">image_saved</string>
    <string name="photo_delete_msg">image deleted</string>
    <string name="delete">Delete</string>
    <string name="no_staus_display">No status found !</string>
    <string name="wa_status_permission_text">You can save WA status by allowing \n storage permission</string>
    <string name="btn_allow">Allow</string>
    <string name="share">Share</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="whatsapp_web_url">https://web.whatsapp.com</string>
    <string name="whatsapp_host">.whatsapp.com</string>
    <!--<string name="user_agent_string">Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.4) Gecko/20100101 Firefox/34.0</string>-->
    <string name="user_agent_string" translatable="false">Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.113 Safari/537.36</string>
    <string name="choose_account">Choose Account</string>
    <string name="continue_using_same_account">Continue using same account</string>
    <string name="logout_amp_scan_using_new_account"><![CDATA[logout & Scan using new account]]></string>
    <string name="select_all">Select All</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="status">Status</string>
    <string name="search">Search</string>
    <string name="app_notification">App notification</string>
    <string name="save">Save</string>
    <string name="downloads">Downloads</string>
    <string name="all_social">All social</string>
    <string name="camera">Camera</string>
    <string name="message">Message</string>
    <string name="messenger">Messenger</string>
    <string name="facebook">Facebook</string>
    <string name="preview">Preview</string>
    <string name="chat">Chat</string>
    <string name="downloader">Downloader</string>
    <string name="email_us">Email Us</string>
    <string name="show_some_love">Show some Love</string>
</resources>