<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.whatsdelete.fragments.WaTrandingStatus"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_cat" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.jatpack.socialmediahub.ui.status.WAStatusFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_allmedia_image" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.jatpack.socialmediahub.ui.directchat.DirectChatFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>