<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/ivSetting"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/search"
                android:textAlignment="center"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_whatsapp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_wa_noti_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/whatsapp"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_msg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/message" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/message"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_messanger"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/messenger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/messenger"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_facebook"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/facebook"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_status_noti_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/status"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_video_downloader"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_video_noti_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/downloader"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_direct_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/margin30dp"
                android:layout_height="@dimen/margin30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_direct_chat_noti_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/chat"
                android:textColor="@color/custom_black"
                android:textSize="8sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ivSetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_settings" />

</RelativeLayout>