<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/total_downloads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_4sdp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/total_downloads" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ll_card_selection"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_left_20"
        android:visibility="visible"
        app:cardBackgroundColor="#F6F5F5"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_4sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="4dp">

            <TextView
                android:id="@+id/img_active"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_white_btn_bg"
                android:gravity="center"
                android:text="@string/images"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/img_inactive"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/videos"
                android:textAllCaps="false"
                android:textColor="#8C8C8C"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/video_active"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_5"
                android:background="@drawable/ic_white_btn_bg"
                android:gravity="center"
                android:text="@string/videos"
                android:textAllCaps="false"
                android:textColor="#8c8c8c"
                android:textSize="10sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/video_inactive"
                android:layout_width="114dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_5"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/videos"
                android:textAllCaps="false"
                android:textColor="#8C8C8C"
                android:textSize="10sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/ll_nodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_frame" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_staus_display" />
    </LinearLayout>
</RelativeLayout>