<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:ignore="MissingDefaultResource">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_round_bg"
        android:padding="@dimen/margin_left_10">
<ImageView
    android:id="@+id/close"
    android:layout_width="@dimen/_20sdp"
    android:layout_height="@dimen/_20sdp"
    android:src="@drawable/ic_close"
    android:layout_alignParentEnd="true"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin5">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/margin_left_10"
                android:text="@string/choose_account"
                android:textColor="@color/rate_us_black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <RelativeLayout
                android:id="@+id/rl_same_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_login_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_toEndOf="@+id/login_img"
                    android:text="@string/continue_using_same_account"
                    android:textColor="#202020"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:button="@drawable/checkbox_selector" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_new_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/login_new_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_toEndOf="@+id/login_new_img"
                    android:text="@string/logout_amp_scan_using_new_account"
                    android:textColor="#202020"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:button="@drawable/checkbox_selector" />
            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>


</LinearLayout>